--- a/requirements.txt
+++ b/requirements.txt
@@ -17,11 +17,14 @@ graphviz==0.20.1
 httplib2==0.22.0
 idna==3.6
 ngrok==0.12.1
+numpy==1.26.3
 oauth2client==4.1.3
 oauthlib==3.2.2
+pandas==2.2.0
 protobuf==4.25.1
 psycopg==3.1.17
 psycopg2-binary==2.9.9
+pyarrow==15.0.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pydot==2.0.0
@@ -38,6 +41,7 @@ rsa==4.9
 six==1.16.0
 sqlparse @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_73ubbfcjni/croot/sqlparse_1668793445223/work
 typing_extensions==4.9.0
+tzdata==2023.4
 uritemplate==4.1.1
 urllib3==2.1.0
 whitenoise==6.5.0
